  (#2911520 Matthieu Casanova)

- Fix selecting mode based on exact filename match. (#3562935 Dale Anson)

- Fix old modes/catalog entries clutter properties. (#3533751 Eric Le Lay)
  [Merged into 5.0.x]

- When checking a box to select a plugin to install, the description was 
  appearing and immediately disappearing. (#3398605 Dale Anson) 
  
}}}
{{{ API Changes

- Deprecated extra overloads of IOUtilities.closeQuietly() in favor of
  using Java5 closeQuietly(Closeable) instead. (Alan Ezust)

- New class: OneTimeMigrationStep, for adding property migration services
  (used by fix for #1871440 Alan Ezust)

- New method VFSBrowser.getLastVisitedPath() (Jarek Czekalski)

- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)

- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)

- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)

- New method: View.getBuffers(), aware of bufferset scope. (Alan Ezust)

- Removed View.setBuffer(Buffer, boolean, boolean) and
  View.setBuffer(Buffer, boolean): methods that had disableFileCheck flag in
  since View no longer checks file status there. (#1871440 Alan Ezust)

- AllBufferSet.AllBufferSet(String glob, View v) - additional required
  argument for View in constructor argument list. (#3423442 Alan Ezust)

- Removed classes: IOProgressMonitor, WorkRequest, WorkThreadPool,
  WorkThreadProgressListener (Thomas Meyer)

- Removed VFSManager.getIOThreadPool() (Thomas Meyer)

- Converted BufferIORequest, VFSFileChooserDialog.GetFileTypeRequest and
  TextAreaTransferHandler.DraggedURLLoader to a Task (Thomas Meyer)

- Converted TaskManager to an enum singelton (Thomas Meyer)

- Changed VFSManager.runInWorkThread(Runnable) to
  VFSManager.runInWorkThread(Task) and made it accept only IO tasks

- New class: AwtRunnableQueue (Thomas Meyer)

}}}
{{{ Editing

- Fixed bug in ruby multiline comments (Patch#3605738 fixing bug #3605168
  Richard The)
